responsiveness added, rounded mages made bigger

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                     <div class="row text-center">
                         <div class="col-lg-4">
                             <img class="rounded-circle animate__animated animate__heartBeat"
-                                src="https://i.imgur.com/FXMlHYl.png" alt="" height="140px" width="140px">
+                                src="https://i.imgur.com/FXMlHYl.png" alt="" height="180px" width="180px">
                             <title>Placeholder</title>
                             <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
                                 dy=".3em"></text>
@@ -109,7 +109,7 @@
                         </div><!-- /.col-lg-4 -->
                         <div class="col-lg-4">
                             <img class="rounded-circle animate__animated animate__heartBeat"
-                                src="https://i.imgur.com/yC4IfAS.png" alt="" height="140px" width="140px">
+                                src="https://i.imgur.com/yC4IfAS.png" alt="" height="180px" width="180px">
                             <!-- <img src="https://i.imgur.com/ohdrr04.mp4" allow="autoplay" frameborder="0"></iframe> -->
                             <title>Placeholder</title>
                             <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
@@ -125,7 +125,7 @@
                         </div><!-- /.col-lg-4 -->
                         <div class="col-lg-4">
                             <img class="rounded-circle animate__animated animate__heartBeat"
-                                src="https://i.imgur.com/JnnY4YA.png" alt="" height="140px" width="140px">
+                                src="https://i.imgur.com/JnnY4YA.png" alt="" height="180px" width="180px">
                             <title>Placeholder</title>
                             <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
                                 dy=".3em"></text>
@@ -140,7 +140,7 @@
                     </div><!-- /.row -->
                 </div>
                 <hr>
-                <h2 class="featurette-heading"><span>Mission Statement</span></h2>
+                <h2><span>Mission Statement</span></h2>
                 <p class="lead animate__animated animate__fadeInLeft">Fonseca Fitness is an all-encompassing
                     environment
                     for women. We want women
