--- a/download.html
+++ b/download.html
@@ -128,6 +128,14 @@
 
     </div>
 
+    <hr class="featurette-divider">
+
+    <div class="text-center">
+        <p><span> Gym opening times:
+                Monday-Friday: 6am-8pm
+                Saturday & Sunday: 8am-12pm</span></p>
+    </div>
+
 
     <hr class="featurette-divider">
 
