--- a/pricing.html
+++ b/pricing.html
@@ -98,11 +98,13 @@
                 <div class="card h-100" id="membership">
 
                     <div class="card-body animate__animated animate__fadeInLeft"">
-                        <h3 class=" card-title"><span>12 Month Membership - £72</span></h3>
+                        <h3 class=" card-title"><span>12 Month Membership - £72pm</span></h3>
                         <p class="card-text">12 month membership , includes access to all
                             classes, 15 minute studio induction, access to our
                             community members group and exclusive discounts
                             on our merchandise.</p>
+                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
                     </div>
                 </div>
             </div>
@@ -110,11 +112,13 @@
                 <div class="card h-100" id="membership">
 
                     <div class="card-body animate__animated animate__fadeInRight">
-                        <h3 class="card-title"> <span>Mum and Baby - £45</span></h3>
+                        <h3 class="card-title"> <span>Mum and Baby - £45pm</span></h3>
                         <p class="card-text">Pay monthly, no fixed contract, includes access to 3 mum
                             and baby classes per week at 9.30am, 15 minute studio
                             induction, access to our community members group and
                             exclusive discounts on our merchandise.</p>
+                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
                     </div>
                 </div>
             </div>
@@ -125,6 +129,8 @@
                         <h3 class="card-title"> <span>Drop In - £12.50</span> </h3>
                         <p class="card-text">Access to one Fonseca Fitness class.
                             (Expires within 24 hours).</p>
+                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
                     </div>
                 </div>
             </div>
@@ -133,22 +139,26 @@
             <div class="col">
                 <div class="card h-100" id="membership">
                     <div class="card-body animate__animated animate__fadeInLeft">
-                        <h3 class="card-title"> <span>6 Month Membership - £76</span></h3>
+                        <h3 class="card-title"> <span>6 Month Membership - £76pm</span></h3>
                         <p class="card-text">6 month membership , includes access to all classes,
                             15 minute studio induction, access to our community
                             members group and exclusive discounts on our
                             merchandise.</p>
+                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100" id="membership">
                     <div class="card-body animate__animated animate__fadeIn">
-                        <h3 class="card-title"> <span>Masters 60+ - £45</span></h3>
+                        <h3 class="card-title"> <span>Masters 60+ - £45pm</span></h3>
                         <p class="card-text">Pay monthly, no fixed contract, includes access to 3 mum
                             and baby classes per week at 9.30am, 15 minute studio
                             induction, access to our community members group and
                             exclusive discounts on our merchandise.</p>
+                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
                     </div>
                 </div>
             </div>
@@ -160,6 +170,8 @@
                             and baby classes per week at 9.30am, 15 minute studio
                             induction, access to our community members group and
                             exclusive discounts on our merchandise.</p>
+                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
                     </div>
                 </div>
             </div>
@@ -168,38 +180,43 @@
             <div class="col">
                 <div class="card h-100" id="membership">
                     <div class="card-body animate__animated animate__fadeInLeft">
-                        <h3 class=" card-title"> <span>Per Month - £70</span> </h3>
+                        <h3 class=" card-title"> <span>Per Month - £70pm</span> </h3>
                         <p class="card-text">There are coaches on hand for 1-1 training within our
                             studio dependent on your goal, we will tailor you to
                             the right coach to fit your needs.
                             Please e-mail us for availability.</p>
+                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100" id="membership">
                     <div class="card-body animate__animated animate__fadeIn">
-                        <h3 class="card-title"><span> Under 16's - £20</span></h3>
+                        <h3 class="card-title"><span> Under 16's - £20pm</span></h3>
                         <p class="card-text">Membership for under 16's that has a relative as a member.
-                            Access to two 45 minute classes per week.</p>
+                            Access to two 45 minute classes per week.</p> <br>
+                        <p><a class="btn" href="./download.html">Download & Join</a></p>
                     </div>
                     <div class="card-footer animate__animated animate__fadeIn">
-                        <h3 class="card-title"><span> Under 16's - £40</span></h3>
+                        <h3 class="card-title"><span> Under 16's - £40pm</span></h3>
 
                         <div class="card-text">Membership for under 16's that does not have a relative as
-                            a member. Access to two 45 minute classes per week.</div>
+                            a member. Access to two 45 minute classes per week.</div><br>
+                        <p><a class="btn" href="./download.html">Download & Join</a></p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100" id="membership">
                     <div class="card-body animate__animated animate__fadeInRight">
-                        <h3 class="card-title"><span>Semi Private Training - £30</span></h3>
+                        <h3 class="card-title"><span>Semi Private Training - £30pm</span></h3>
                         <p class="card-text">If you want to experience small group training then
                             semi private training is just that. You still receive a
                             tailored programme to follow, however there will be
                             1 coach, to 3 clients in a 55 minute session.
                             Please e-mail us for availability.</p>
+                        <p><a class="btn" href="./download.html">Download & Join</a></p>
                     </div>
                 </div>
             </div>
@@ -208,6 +225,7 @@
                     <div class="card-body animate__animated animate__fadeIn">
                         <h3 class="card-title"> <span>12 Month Membership - £49pm</span></h3>
                         <p class="card-text">Gym only membership, all gym access is bookable via the app</p>
+                        <p><a class="btn" href="./download.html">Download & Join</a></p>
                     </div>
                 </div>
             </div>
@@ -216,6 +234,7 @@
                     <div class="card-body animate__animated animate__fadeIn">
                         <h3 class="card-title"> <span>6 Month Membership - £57pm</span></h3>
                         <p class="card-text">Gym only membership, all gym access is bookable via the app</p>
+                        <p><a class="btn" href="./download.html">Download & Join</a></p>
                     </div>
                 </div>
             </div>
@@ -229,6 +248,14 @@
                         without having to queue for equipment</p>
                 </div>
             </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="text-center">
+            <p><span> Gym opening times:
+                    Monday-Friday: 6am-8pm
+                    Saturday & Sunday: 8am-12pm</span></p>
         </div>
 
 
