--- a/timetable.html
+++ b/timetable.html
@@ -86,7 +86,7 @@
     </header>
     <div class="container-fluid align-items-center text-center">
         <img class="rounded-circle animate__animated animate__heartBeat" id="pricingimg"
-            src="https://i.imgur.com/7t1SEbw.png" alt="" height="140px" width="140px">
+            src="https://i.imgur.com/7t1SEbw.png" alt="" height="180px" width="180px">
     </div>
     <h1 class="text-center" id="pricingtitle"><span>Classes</span></h1>
 
@@ -249,7 +249,16 @@
                 <span class="text-center">*8 women per hourly slot to enable keeping the intimacy and community feel
                     without having to queue for equipment</span>
 
-                <hr>
+
+
+                <hr class="featurette-divider">
+
+                <div class="text-center">
+                    <p><span> Gym opening times:
+                            Monday-Friday: 6am-8pm
+                            Saturday & Sunday: 8am-12pm</span></p>
+                </div>
+                <hr class="featurette-divider">
 
                 <footer class="footer">
                     <nav class="navbar navbar-expand-md navbar-dark bg-black">
