--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row">
           <div class="col-lg-4">
             <img class="rounded-circle animate__animated animate__heartBeat" src="https://i.imgur.com/FXMlHYl.png"
-              alt="" height="140px" width="140px">
+              alt="" height="180px" width="180px">
             <title>Placeholder</title>
             <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
             </svg>
@@ -126,7 +126,7 @@
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle animate__animated animate__heartBeat" src="https://i.imgur.com/yC4IfAS.png"
-              alt="" height="140px" width="140px">
+              alt="" height="180px" width="180px">
             <!-- <img src="https://i.imgur.com/ohdrr04.mp4" allow="autoplay" frameborder="0"></iframe> -->
             <title>Placeholder</title>
             <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
@@ -140,7 +140,7 @@
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle animate__animated animate__heartBeat" src="https://i.imgur.com/JnnY4YA.png"
-              alt="" height="140px" width="140px">
+              alt="" height="180px" width="180px">
             <title>Placeholder</title>
             <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
             </svg>
@@ -160,7 +160,7 @@
         <hr class="featurette-divider">
 
         <div class="row featurette ">
-          <div class="col-md-7">
+          <div class="col-md-6">
             <h2 class="featurette-heading"><span>Fara Fonseca</span></h2>
 
             <p>Farah founded Fonseca Fitness in 2012 and is our head coach
@@ -190,28 +190,25 @@
           <div class="col-md-5">
 
             <img src="https://i.imgur.com/CnaCvxM.jpg" height="600px" width="500px" alt="">
+
           </div>
         </div>
       </div>
-      <hr class="featurette-divider">
 
-      <div class="text-center">
-        <p><span> Gym opening times:
-            Monday-Friday: 6am-8pm
-            Saturday & Sunday: 8am-12pm</span></p>
-      </div>
       <hr class="featurette-divider">
 
       <div class="card text-center">
         <div class="card-header">
-          <h3 class="card-title text-center"><span>Facilities Include:</span></h3>
-          <img src="https://i.imgur.com/cnp5Xfh.jpg" id="facilities-img" height="600px" width="500px" alt="">
+          <h2 class="card-title text-center"><span>Facilities Include:</span></h2>
+          <div class="d-none d-sm-block p-2">
+            <img src="https://i.imgur.com/cnp5Xfh.jpg" id="facilities-img" height="600px" width="500px" alt="">
+          </div>
         </div>
-        <div class="card-body">
+        <div class="card-body" id="fclist">
           <p class="card-text text-center">
           <p>Multi Gym</p>
-          <p>3 Benches</p>
-          <p>Dumbells up to 25KG</p>
+          <p>3 x Benches</p>
+          <p>Range of Dumbells up to 25KG</p>
           <p>2 x Sqaut Racks</p>
           <p>2 x Air Bikes</p>
           <p>1 Rowing Machine</p>
@@ -229,6 +226,13 @@
           </p>
           <a href="./download.html"><button class="btn session">Download and Join</button></a>
         </div>
+      </div>
+      <hr class="featurette-divider">
+
+      <div class="text-center">
+        <p><span> Gym opening times:
+            Monday-Friday: 6am-8pm
+            Saturday & Sunday: 8am-12pm</span></p>
       </div>
 
 
