span added to 8 women rule

--- a/pricing.html
+++ b/pricing.html
@@ -244,8 +244,9 @@
 
                 <div class="card-body animate__animated animate__fadeIn">
 
-                    <p class="card-text">*8 women per hourly slot to enable keeping the intimacy and community feel
-                        without having to queue for equipment</p>
+                    <p class="card-text"><span>*8 women per hourly slot to enable keeping the intimacy and community
+                            feel
+                            without having to queue for equipment</span></p>
                 </div>
             </div>
         </div>
