php form completed, timetable changes made awaiting deployment and domain transfer

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                             <a class="nav-link" href="./pricing.html"><span>Pricing</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contact.html"><span>Contact Us</span></a>
+                            <a class="nav-link" href="./contact.php"><span>Contact Us</span></a>
                         </li>
                     </ul>
                     <form class="d-flex">
@@ -243,26 +243,6 @@
                             with
                             a
                             male coach.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="https://i.imgur.com/KPSqKqc.png" class="card-img-top mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title"><span>Trish</span></h5>
-                        <p class="card-text">Trish is our over 50’s coach and will be in the studio once a week.
-                            Trish has been teaching group classes for nearly 20 years. Classes have ranged from aqua
-                            aerobics,
-                            body balance, body pump and pulmonary maintenance and has worked with women of all ages
-                            to
-                            stay
-                            mobile
-                            regardless of their level of ability.
-                            “I am excited to be working with the women of Fonseca fitness. I enjoy supporting women,
-                            regardless of
-                            age or ability, have the confidence to exercise and maintain a strong healthy body”
                         </p>
                     </div>
                 </div>
