--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 
 
+
   <!-- Bootstrap core CSS -->
   <!-- <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
@@ -67,7 +68,7 @@
               <a class="nav-link" href="./pricing.html"><span>Pricing</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contact.html"><span>Contact Us</span></a>
+              <a class="nav-link" href="./contact.php"><span>Contact Us</span></a>
             </li>
           </ul>
           <form class="d-flex">
@@ -161,7 +162,7 @@
 
         <div class="row featurette ">
           <div class="col-md-6">
-            <h2 class="featurette-heading"><span>Fara Fonseca</span></h2>
+            <h2 class="featurette-heading"><span>Farah Fonseca</span></h2>
 
             <p>Farah founded Fonseca Fitness in 2012 and is our head coach
 
@@ -221,7 +222,7 @@
           <p>5 x Normal Bars</p>
           <p>1 x Farmers Walk</p>
           <p>Sandbags</p>
-          <p>Based a 5 minute drive away from the town center, we offer free parking</p>
+          <p>Based a 5 minute drive away from the town centre, we offer free parking!</p>
 
           </p>
           <a href="./download.html"><button class="btn session">Download and Join</button></a>
@@ -263,7 +264,6 @@
 
       </footer>
   </main>
-
   <script src="index.js"></script>
   <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
