--- a/pricing.html
+++ b/pricing.html
@@ -68,7 +68,7 @@
                             <a class="nav-link" href="./pricing.html"><span>Pricing</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contact.html"><span>Contact Us</span></a>
+                            <a class="nav-link" href="./contact.php"><span>Contact Us</span></a>
                         </li>
                     </ul>
                     <form class="d-flex">
@@ -210,7 +210,7 @@
             <div class="col">
                 <div class="card h-100" id="membership">
                     <div class="card-body animate__animated animate__fadeInRight">
-                        <h3 class="card-title"><span>Semi Private Training - £30pm</span></h3>
+                        <h3 class="card-title"><span>Semi Private Training - £30 per session</span></h3>
                         <p class="card-text">If you want to experience small group training then
                             semi private training is just that. You still receive a
                             tailored programme to follow, however there will be
@@ -244,7 +244,8 @@
 
                 <div class="card-body animate__animated animate__fadeIn">
 
-                    <p class="card-text"><span>*8 women per hourly slot to enable keeping the intimacy and community
+                    <p class="card-text"><span>*We keep our gym slots to 8 women per hourly slot to enable us to keep
+                            the intimacy and community
                             feel
                             without having to queue for equipment</span></p>
                 </div>
