--- a/download.html
+++ b/download.html
@@ -67,7 +67,7 @@
                             <a class="nav-link" href="./pricing.html"><span>Pricing</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contact.html"><span>Contact Us</span></a>
+                            <a class="nav-link" href="./contact.php"><span>Contact Us</span></a>
                         </li>
                     </ul>
                     <form class="d-flex">
