--- a/timetable.html
+++ b/timetable.html
@@ -66,7 +66,7 @@
                             <a class="nav-link" href="./pricing.html"><span>Pricing</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contact.html"><span>Contact Us</span></a>
+                            <a class="nav-link" href="./contact.php"><span>Contact Us</span></a>
                         </li>
                     </ul>
                     <form class="d-flex">
@@ -107,12 +107,12 @@
                         <div class="accordion-body">
                             <p><strong>6 - 6:45</strong> - BURN</p>
                             <p><strong>7 - 7:45</strong> - POWER</p>
-                            <p><strong>8 - 8:45</strong> - OVER 50's</p>
                             <p><strong>9:30 - 10:15</strong> - MUM & BABY</p>
                             <p><strong>16:15 - 17:00</strong> - 11 - 16 STRENGTH AND EMPOWERMENT</p>
                             <p><strong>17:30 - 18:15</strong> - BURN</p>
                             <p><strong>18:30-19:30</strong> - CALISTHENICS</p>
                             <p><strong>18:30-19:15</strong> - POWER</p>
+                            <p><strong>19:30-20:15</strong> - BOXING</p>
                         </div>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                             <p><strong>7 - 7:45</strong> - BURN</p>
                             <p><strong>16:15 - 17:00</strong> - MUM & DAUGHTER WORKOUT</p>
                             <p><strong>17:30 - 18:15</strong> - BURN</p>
-                            <p><strong>19:30 - 20:15</strong> - OVER 50's</p>
+                            <p><strong>18:30 - 19:15</strong> - POWER</p>
                             <p><strong>19:30 - 20:15</strong> - STRONGWOMAN</p>
                         </div>
                     </div>
@@ -151,9 +151,6 @@
                             <p><strong>9:30 - 10:15</strong> - MUM & BABY</p>
                             <p><strong>16:15 - 17:00</strong> - 11 - 16 STRENGTH AND EMPOWERMENT</p>
                             <p><strong>17:30 - 18:15</strong> - POWER</p>
-                            <p><strong>18:30 - 19:15</strong> - BURN</p>
-                            <p><strong>18:30 - 19:30</strong> - FEMALE SELF DEFENCE</p>
-                            <p><strong>19:30 - 20:15</strong> - BOXING</p>
                         </div>
                     </div>
                 </div>
@@ -178,7 +175,6 @@
                             <p><strong>17:30-19:00</strong> - CALISTHENICS</p>
                             <p><strong>18:30-19:15</strong> - BURN</p>
                             <p><strong>19:15 - 20:15</strong> - MAMATONE*</p>
-                            <p><strong>19:30-20:15</strong> - POWER</p>
                             <p><strong>20:30-21:15</strong> - HYPOTONE*</p>
 
                         </div>
@@ -236,18 +232,11 @@
                     <div id="flush-collapseSeven" class="accordion-collapse collapse"
                         aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-
-
+                            <p><strong>8 - 8:45</strong> - BURN</p>
                             <p><strong>9 - 10:30</strong> - FEMALE SELF DEFENCE</p>
-                            <p><strong>9 - 9:45</strong> - POWER</p>
-                            <p><strong>10 - 10:45</strong> - BURN</p>
-
-
                         </div>
                     </div>
                 </div>
-                <span class="text-center">*8 women per hourly slot to enable keeping the intimacy and community feel
-                    without having to queue for equipment</span>
 
 
 
