link to coaches fixed, typos sorted

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               to
               how they can move their bodies without limits.
 
-              We are more that a fitness studio</p>
+              We are more that a fitness studio.</p>
             <!-- <p><a class="btn" href="#">View details &raquo;</a></p> -->
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
@@ -134,7 +134,7 @@
             </svg>
 
             <h2>One Team</h2>
-            <p>We work in synergy bringing together individual skills and expertise to createbest possible outcomes for
+            <p>We work in synergy bringing together individual skills and expertise to create best possible outcomes for
               you, the women of Fonseca Fitness.
             </p>
             <p><a class="btn" href="./download.html">Download & Join</a></p>
@@ -174,19 +174,20 @@
               qualification.
               Farah has completed a course at the National Institute for Eating Disorders to help women and young
               girls
-              address their relationship with both themselves, others and food. I also have a few sporting achievements
-              under my belt (quite literally).
+              address their relationship with both themselves, others and food. Farah also has a few sporting
+              achievements
+              under her belt (quite literally).
             <ul>
               <li> 3 x England’s Strongest Woman</li>
               <li> 1 x Britain’s Strongest Woman</li>
               <li> 2018 Strongest Woman in the World</li>
               <li> Professional Strongwoman</li>
             </ul>
-            For those who are ready to work hard, I am here for you. Not only for your time in the studio, but in
+            For those who are ready to work hard, Farah is here for you. Not only for your time in the studio, but in
             all
             areas of your health journey.
             </p>
-            <a href="./about.html"><button class="btn">Meet the Coaches</button></a>
+            <a href="./about.html#meetthecoaches"><button class="btn">Meet the Coaches</button></a>
           </div>
           <div class="col-md-5">
 
@@ -208,19 +209,19 @@
         <div class="card-body" id="fclist">
           <p class="card-text text-center">
           <p>Multi Gym</p>
-          <p>3 x Benches</p>
+          <p>Benches</p>
           <p>Range of Dumbells up to 25KG</p>
-          <p>2 x Sqaut Racks</p>
-          <p>2 x Air Bikes</p>
-          <p>1 Rowing Machine</p>
+          <p>Sqaut Racks</p>
+          <p>Air Bikes</p>
+          <p>Rowing Machine</p>
           <p>Plyo Boxes</p>
-          <p>1 x Prowler</p>
-          <p>1 x Sled</p>
-          <p>1 x Trap Bar</p>
-          <p>1 x Safety Squat</p>
-          <p>1 x FB Bar</p>
-          <p>5 x Normal Bars</p>
-          <p>1 x Farmers Walk</p>
+          <p>Prowler</p>
+          <p>Sled</p>
+          <p>Trap Bar</p>
+          <p>Safety Squat</p>
+          <p>FB Bar</p>
+          <p>Normal Bars</p>
+          <p>Farmers Walk</p>
           <p>Sandbags</p>
           <p>Based a 5 minute drive away from the town centre, we offer free parking!</p>
 
