classes and reviews added

--- a/index.html
+++ b/index.html
@@ -203,29 +203,59 @@
 
       <div class="card text-center">
         <div class="card-header">
-          <h2 class="card-title text-center"><span>Facilities Include:</span></h2>
-          <div class="d-none d-sm-block p-2">
+          <h2 class="card-title text-center"><span>Reviews</span></h2>
+          <!-- <div class="d-none d-sm-block p-2">
             <img src="https://i.imgur.com/cnp5Xfh.jpg" id="facilities-img" height="600px" width="500px" alt="">
-          </div>
+          </div> -->
         </div>
         <div class="card-body" id="fclist">
           <p class="card-text text-center">
-          <p>Multi Gym</p>
-          <p>Benches</p>
-          <p>Range of Dumbells up to 25KG</p>
-          <p>Sqaut Racks</p>
-          <p>Air Bikes</p>
-          <p>Rowing Machine</p>
-          <p>Plyo Boxes</p>
-          <p>Prowler</p>
-          <p>Sled</p>
-          <p>Trap Bar</p>
-          <p>Safety Squat</p>
-          <p>FB Bar</p>
-          <p>Normal Bars</p>
-          <p>Farmers Walk</p>
-          <p>Sandbags</p>
-          <p>Based a 5 minute drive away from the town centre, we offer free parking!</p>
+          <p>Great facilities, equipment and feel. I’ve just been to my first class,
+            definitely aching but can’t wait to get fit! - <strong>Hannah Kheller</strong>
+          </p>
+          <p>Despite being really tough it was really enjoyable. Something about
+            doing weight based stuff feels really empowering, you want to complete
+            the reps and fight for it. Lovely to do the class with other woman and
+            sweat care free. - <strong>Charlie Utton</strong>
+          </p>
+          <p>Loads of parking, fresh and new with a huge selection of classes and
+            equipment, instructors are awesome and friendly. I look forward to my
+            time in this gym. - <strong>Nicola Marshall</strong>
+          </p>
+          <p>I joined 2 weeks ago starting with the Mama & Baby & post natal classes,
+            there great! The atmosphere is amazing, so welcoming and I love the
+            personal touches with in the gym.
+            I was never a fan of exercising or gyms but I find myself getting
+            excited about my next class, I feel like I’m pushing myself but in a
+            safe way after having a baby.
+            And just after 2 weeks Iv lost an inch & a half off my waist and 1 inch
+            off my legs
+            Everyone is lovely here and loving the vibe of the whole setting! Defo
+            recommend this women’s only gym!! - <strong>Vicky Saunders</strong>
+          </p>
+          <p>After resetting my fitness journey after 3 years I have found somewhere
+            that is fun, challenging but so supportive! I can’t wait to see where
+            this fitness journey takes me - <strong>Louise Powell</strong>
+          </p>
+          <p>Felt so welcomed as soon as I arrived to mum and baby class, farah
+            always says hi and asks how we are. Such a friendly atmosphere, everyone
+            is so nice. I'm so glad there's an all female gym here in Basingstoke -
+            <strong>Beth Dawson</strong>
+          </p>
+          <p>So happy I came back after having my baby! Such a positive place to be
+            and all the girls are so lovely. I actually feel excited to work out
+            again! Can’t thank farah and Zoe enough for accepting me back and
+            helping me! - <strong>Kim Rutherford</strong>
+          </p>
+          <p>Great mix of classes, no class is ever the same which is fun as you
+            never know what you’re walking into and it never gets boring. My
+            confidence in knowing how to do the exercises has gone up which I
+            wouldn’t have gotten at a gym or in big classes plus having the
+            confidence to push myself. Meeting some lovely new people and always fun
+            having the same faces in the classes as well, great comradery. Thanks
+            Zoe and Farah! - <strong>Steph Church</strong>
+          </p>
+
 
           </p>
           <a href="./download.html"><button class="btn session">Download and Join</button></a>
@@ -251,12 +281,12 @@
                 RG21 6YU </span><br>
               <a class="nav-link active" aria-current="page" href="#"><span>Back to the Top</span></a>
             </a>
+            <form class="d-flex">
 
+              <a href="https://www.facebook.com/FonsecaFitness1/"><i class="fa-brands fa-facebook-square fa-2x"></i></a>
+              <a href="https://www.instagram.com/fonsecafitness_/"><i class="fa-brands fa-instagram fa-2x"></i></a>
 
-            <a href="https://www.facebook.com/FonsecaFitness1/"><i class="fa-brands fa-facebook-square fa-2x"></i></a>
-            <a href="https://www.instagram.com/fonsecafitness_/"><i class="fa-brands fa-instagram fa-2x"></i></a>
-
-            <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
+              <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
 
             </form>
           </div>
