--- a/timetable.html
+++ b/timetable.html
@@ -84,14 +84,87 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluid align-items-center text-center">
-        <img class="rounded-circle animate__animated animate__heartBeat" id="pricingimg"
-            src="https://i.imgur.com/7t1SEbw.png" alt="" height="180px" width="180px">
-    </div>
-    <h1 class="text-center" id="pricingtitle"><span>Classes</span></h1>
-
 
     <body>
+        <div class="container-fluid align-items-center text-center">
+            <img class="rounded-circle animate__animated animate__heartBeat" id="pricingimg"
+                src="https://i.imgur.com/7t1SEbw.png" alt="" height="180px" width="180px">
+        </div>
+        <h1 class="text-center" id="pricingtitle"><span>Classes</span></h1>
+
+        <div class="card-body text-center animate__animated animate__fadeIn" id="fclist">
+            <p>
+            <h2>Burn</h2>A high intensity interval training class. Designed to work on
+            your power, stamina, speed, strength and agility. Bright lights and
+            pumping music.
+            </p>
+            <p>
+            <h2>Power</h2>A class designed to produce all round power, with a mix of
+            strength training, body weight exercises and a small amount of cardio.
+            </p>
+            <p>
+            <h2>Strongwomen</h2>Join 3x England’s Strongest Woman for our strongwoman
+            class. Designed to push your body in a different capacity with movements
+            you don’t normally see day to day.
+            </p>
+            <p>
+            <h2>Yoga</h2>A class designed to teach you how to focus and unwind whilst
+            learning a different type of strength. Both muscular and mental strength
+            to get you through your session.
+            </p>
+            <p>
+            <h2>Mum & Baby</h2>These classes are designed so that all mums can start
+            pushing their bodies safely. We take mums from 12 weeks post vaginal
+            birth and 16 weeks post Caesarean.
+            </p>
+            <p>
+            <h2>Post Natal Rehab</h2>A class coached by our midwife and post natal
+            specialist, a class designed to help all mum’s restore their bodies
+            after pregnancy before getting back to exercise.
+            </p>
+            <p>
+            <h2>11-16 Strength & Empowerment</h2>A class for 11-16 year old girls based on
+            a well rounded strength training programme. Designed to build confidence
+            and self esteem not just in the gym but in all areas of life.
+            </p>
+            <p>
+            <h2>Mum & Daughter</h2>A class designed to give you both time, set aside for
+            just the two of you. Daughter age is between 7-11 years old. A class
+            which will strengthen your bond, listen to one another and enjoy reach
+            others company whilst working out.
+            </p>
+            <p>
+            <h2>Boxing</h2>A class designed to work both your body and your mind. Our
+            coaches will take you through different punches and combo’s, alongside
+            some body weight exercises to see what you’re really capable of.
+
+            </p>
+            <p>
+            <h2>Calisthenics</h2>Master your body without the use of gym equipment. Our
+            calisthenics classes will help you develop strength, endurance,
+            flexibility and coordination.
+
+            </p>
+            <p>
+            <h2>Self Defence</h2>A class designed to help you gain self confidence,
+            empower you and learn how to physically protect yourself.
+
+            </p>
+            <p>
+            <h2>Friday night party night</h2>Our bespoke party night will see you have the
+            best workout party experience. Bring your friend to a different kind of
+            bar for bright lights, great music and that post workout adrenaline
+            rush!
+
+            </p>
+
+
+            </p>
+        </div>
+        <hr>
+
+        <h1 class="text-center" id="pricingtitle"><span>Timetable</span></h1>
+
         <div class="container-fluid">
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item animate__animated animate__fadeInLeft" style="color: orange;">
