--- a/pricing.html
+++ b/pricing.html
@@ -273,15 +273,15 @@
                         <a class="nav-link active" aria-current="page" href="#"><span>Back to the Top</span></a>
                     </a>
 
+                    <form class="d-flex">
 
 
+                        <a href="https://www.facebook.com/FonsecaFitness1/"><i
+                                class="fa-brands fa-facebook-square fa-2x"></i></a>
+                        <a href="https://www.instagram.com/fonsecafitness_/"><i
+                                class="fa-brands fa-instagram fa-2x"></i></a>
 
-                    <a href="https://www.facebook.com/FonsecaFitness1/"><i
-                            class="fa-brands fa-facebook-square fa-2x"></i></a>
-                    <a href="https://www.instagram.com/fonsecafitness_/"><i
-                            class="fa-brands fa-instagram fa-2x"></i></a>
-
-                    <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
+                        <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
 
                     </form>
                 </div>
