--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
       </footer>
   </main>
-  <script src="index.js"></script>
+  <!-- <script src="index.js"></script> -->
   <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
